expand and collapse working sort of. bug in the redux dispatch needs to be fixed

--- a/client/src/public/stylesheets/base/checklist.scss
+++ b/client/src/public/stylesheets/base/checklist.scss
@@ -68,6 +68,7 @@ $grey-background: #f5f5f5;
 	width: 75px;
 	height: 65px;
 	padding: 0 0 70px;
+
 }
 
 // Checklist List Container and Items
@@ -89,7 +90,8 @@ ul.checklist-list-container {
 	top: 0.6rem;
 	left: 2rem;
 	font-size: 1rem;
-	position: absolute
+	position: absolute;
+	border: 1px solid $grey-border;
 }
 
 .list-item-checkbox:hover {
@@ -107,10 +109,11 @@ ul.checklist-list-container {
 
 .list-item-title {
 	font-family: $font-family-serif;
-	margin-left: 6rem;
+	margin: 0.3rem 0 0.3rem 6rem;
+	font-size: 1.7rem;
 }
 
-.list-caret {
+.list-item-chevron {
 	position: absolute;
 	right: 2rem;
 	top: 0.6rem;
